syntax = "proto3";
package dymint;
option go_package = "github.com/dymensionxyz/dymint/types/pb/dymint";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "types/tendermint/abci/types.proto";
import "types/tendermint/types/types.proto";
import "types/tendermint/types/validator.proto";
import "types/tendermint/types/params.proto";
import "types/tendermint/state/types.proto";
import "types/dymint/dymint.proto";


message State {
  tendermint.state.Version version = 1;

  string  chain_id = 2;
  int64 initial_height = 3;

  int64 last_block_height = 4;

  tendermint.types.BlockID last_block_id = 5 [(gogoproto.nullable) = false, (gogoproto.customname) = "LastBlockID"];
  google.protobuf.Timestamp last_block_time = 6 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];

  reserved 7;
  reserved 8;
  tendermint.types.ValidatorSet validators = 9 [deprecated = true]; 
  reserved 10;


  int64 last_height_validators_changed = 11;
  

  reserved 12;
  int64 last_height_consensus_params_changed = 13;

  bytes last_results_hash = 14;

  bytes app_hash = 15;

  uint64 last_store_height = 16 [(gogoproto.customname) = "LastStoreHeight"];
  uint64 base_height = 17;

  SequencerSet sequencerSet         = 18 [(gogoproto.nullable) = false];
  RollappConsensusParams consensus_params = 19 [(gogoproto.nullable) = false];
  
}

//rollapp params defined in genesis and updated via gov proposal
message RollappConsensusParams {
  //maximum amount of gas that all transactions included in a block can use
  int64 blockmaxgas = 1;
  //maximum allowed block size
  int64 blockmaxsize = 2;
  //data availability type (e.g. celestia) used in the rollapp
  string da = 3 ;
  //commit used for the rollapp executable
  string commit = 4 ;
}